# citation-parser

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  corrected_metrics.json  debug_openaire.py  demo.ipynb  pyproject.toml  requirements.txt  setup.bkp.py  setup.py
citation-parser/: citation_parser.py  setup.py
citation-parser/search/: citation_formatter.py  search_api.py
citation_parser/: __init__.py  citation_parser.py
citation_parser/search/: citation_formatter.py  search_api.py
docs/: contribute.md  examples.md
evaluation/: README.txt  api_linking_test.json  evaluate.py  evaluate_citations.py  generate_summary_evaluation.py
evaluation_results/: 04_ensemble_detailed_20250623_170050.tsv  04_hal_detailed_20250623_170050.tsv  04_pubmed_detailed_20250623_170050.tsv  05_results_20250623_170050.json  EVALUATION_SUMMARY.md  README.md
evaluation_results/evaluation_results-thresholds-75_65/: 01_summary_dashboard_20250625_131847.txt  01_summary_dashboard_20250625_155810.txt  02_accuracy_metrics_20250625_131847.tsv  02_accuracy_metrics_20250625_155810.tsv  03_comparison_table_20250625_131847.tsv  04_crossref_detailed_20250625_131847.tsv  04_ensemble_detailed_20250625_131847.tsv  04_openaire_detailed_20250625_131847.tsv  04_openalex_detailed_20250625_131847.tsv  04_pubmed_detailed_20250625_131847.tsv  05_results_20250625_131847.json
evaluation_results/evaluation_results-thresholds-80_70/: 01_summary_dashboard_20250623_193400.txt  01_summary_dashboard_20250625_155714.txt  02_accuracy_metrics_20250623_193400.tsv  02_accuracy_metrics_20250625_155714.tsv  03_comparison_table_20250623_170050.tsv  04_crossref_detailed_20250623_170050.tsv  04_openaire_detailed_20250623_170050.tsv  04_openalex_detailed_20250623_170050.tsv
references_tractor/: __init__.py  core.py  references_tractor.py
references_tractor/search/: api_capabilities.py  field_mapper.py  progressive_search.py  search_api.py
references_tractor/utils/: citation_evaluator.py  entity_validation.py
