[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "references-tractor"
version = "1.0.0"
description = "Tools for processing raw citations and linking them to scholarly knowledge graphs."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nicolau Duran-Silva", email = "nicolau.duransilva@sirisacademic.com"},
    {name = "Pablo Accuosto", email = "pablo.accuosto@sirisacademic.com"},
    {name = "Ruggero Cortini", email = "ruggero.cortini@sirisacademic.com"}
]
keywords = ["citation", "parsing", "nlp", "academic", "bibliography", "scholarly"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "nltk>=3.8.1",
    "numpy>=1.24.0,<2.0",
    "pandas>=2.2.0",
    "requests>=2.30.0",
    "scikit-learn>=1.4.0",
    "setuptools>=60.0.0",
    "shap>=0.46.0",
    "simpletransformers>=0.70.0",
    "text-unidecode>=1.3",
    "torch>=2.1.0,<3.0",
    "tqdm>=4.66.0",
    "transformers>=4.48.0",  # ModernBERT officially supported from 4.48.0+
    "accelerate>=0.20.0",
    "googlesearch-python",
]

[project.urls]
Homepage = "https://github.com/sirisacademic/references-tractor"
Repository = "https://github.com/sirisacademic/references-tractor"
Documentation = "https://github.com/sirisacademic/references-tractor#readme"
"Bug Tracker" = "https://github.com/sirisacademic/references-tractor/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
evaluation = [
    "jupyter",
    "matplotlib",
    "seaborn",
]
performance = [
    "flash-attn>=2.0.0; sys_platform != 'darwin'",  # For faster ModernBERT inference
]

# Explicit package discovery and data inclusion
[tool.setuptools]
# Automatically find all packages
packages = ["references_tractor", "references_tractor.search", "references_tractor.utils"]
include-package-data = true

# ENHANCED: Ensure all necessary files are included
[tool.setuptools.package-data]
references_tractor = ["*.txt", "*.json"]
"references_tractor.search" = ["*.py"]
"references_tractor.utils" = ["*.py"]

# ENHANCED: Include data files in package
[tool.setuptools.package-dir]
references_tractor = "references_tractor"

# Optional: Add tool configurations
[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
